--- a/index.html
+++ b/index.html
@@ -22,98 +22,45 @@
 
         <div class="collection card-panel" style="padding: 0px">
           <div class="collection-header about_me_header">
-            <span class="name">Stan Kocken</span>
+            <span class="name">Kyle Patrick Sharp</span>
           </div>
 
           <div class="collection-item avatar">
             <img src="img/ico_date.svg" class="icon">
-            <span class="title">27</span>
+            <span class="title">26</span>
             Years Old
           </div>
 
           <div class="divider"></div>
 
-          <a href="mailto:stan.kocken+cv@gmail.com" target="_blank" class="collection-item avatar">
+          <a href="mailto:kyle@kpsharp.com" target="_blank" class="collection-item avatar">
             <img src="img/ico_email.svg" class="icon">
-            <span class="title">stan.kocken@gmail.com</span>
+            <span class="title">kyle@kpsharp.com</span>
             Personal
           </a>
 
-          <a href="http://www.stankocken.com?utm_source=stankocken_cv&utm_medium=cv&utm_campaign=stankocken_cv" target="_blank" class="collection-item avatar">
+          <a href="https://www.kpsharp.com" target="_blank" class="collection-item avatar">
             <img src="img/ico_web.svg" class="icon">
-            <span class="title">stankocken.com</span>
+            <span class="title">kpsharp.com</span>
             Personal
           </a>
 
           <div class="divider"></div>
 
-          <a href="https://github.com/StanKocken?utm_source=stankocken_cv&utm_medium=cv&utm_campaign=stankocken_cv" target="_blank" class="collection-item avatar">
-            <img src="img/ico_github.svg" class="icon">
-            <span class="title">StanKocken</span>
-            GitHub
+          <a href="https://stackoverflow.com/users/3574459/kpsharp" target="_blank" class="collection-item avatar">
+            <img src="img/icon_stackoverflow.svg" class="icon">
+            <span class="title">kpsharp</span>
+            Stack Overflow
           </a>
 
           <div class="divider"></div>
 
-          <a href="https://twitter.com/stan_kocken?utm_source=stankocken_cv?utm_source=stankocken_cv&utm_medium=cv&utm_campaign=stankocken_cv" target="_blank" class="collection-item avatar">
-            <img src="img/ico_twitter.svg" class="icon">
-            <span class="title">@stan_kocken</span>
-            Twitter
-          </a>
-
-          <a href="https://plus.google.com/u/0/+StanKOCKEN?utm_source=stankocken_cv?utm_source=stankocken_cv&utm_medium=cv&utm_campaign=stankocken_cv" target="_blank" class="collection-item avatar">
-            <img src="img/ico_google_plus.svg" class="icon">
-            <span class="title">+StanKocken</span>
-            Google Plus
-          </a>
-
-          <div class="divider"></div>
-
-          <a href="https://www.linkedin.com/in/stankocken?utm_source=stankocken_cv?utm_source=stankocken_cv&utm_medium=cv&utm_campaign=stankocken_cv" target="_blank" class="collection-item avatar">
+          <a href="https://www.linkedin.com/in/kyle-sharp-5815926a/" target="_blank" class="collection-item avatar">
             <img src="img/ico_linkedin.svg" class="icon">
-            <span class="title">stan-kocken</span>
+            <span class="title">Kyle Sharp</span>
             Linkedin
           </a>
 
-          <a href="http://www.viadeo.com/fr/profile/stan.kocken?utm_source=stankocken_cv?utm_source=stankocken_cv&utm_medium=cv&utm_campaign=stankocken_cv" target="_blank" class="collection-item avatar">
-            <img src="img/ico_viadeo.svg" class="icon">
-            <span class="title">stan.kocken</span>
-            Viadeo
-          </a>
-
-        </div>
-
-        <div class="card-panel cv_card">
-          <img src="img/ico_interest.svg" class="icon">
-          <span class="title">Interests</span>
-
-          <div class="skills">
-
-              <span class="title">Aviation</span>
-              Private Pilot Licence (PPL) in France<br />
-              Commercial Pilot Licence (CPL) in Canada
-
-              <span class="title">Photography</span>
-              <a href="https://www.flickr.com/photos/stankoc?utm_source=stankocken_cv&utm_medium=cv&utm_campaign=stankocken_cv" target="_blank" class="at">#Flickr</a> stankoc
-
-          </div>
-
-        </div>
-
-        <div class="card-panel cv_card">
-          <img src="img/ico_language.svg" class="icon">
-          <span class="title">Language</span>
-          <div class="skills">
-
-              <span class="title">French</span>
-              Native Language
-
-              <span class="title">English</span>
-              Good skills, both written and oral.<br />
-              <a href="https://www.ets.org/toeic?utm_source=stankocken_cv&utm_medium=cv&utm_campaign=stankocken_cv" target="_blank" class="at">#TOEIC</a> (2010): 835/990<br />
-              Daily usage since November 2012
-
-          </div>
         </div>
 
       </div>
@@ -121,7 +68,7 @@
 
       <div class="col s12 l8">
 
-        <span class="cv_title">Android Developer</span>
+        <span class="cv_title">Software Developer</span>
 
         <div class="card-panel cv_card">
           <img src="img/ico_work.svg" class="icon">
@@ -129,71 +76,17 @@
 
           <div class="date_container">
 
-            <span class="date"><div class="round_mark"></div>Nov 2012 - Present</span>
-            <div class="date_entry left_border">
-              <span class="title">Android Lead Developer <a href="http://www.preplaysports.com?utm_source=stankocken_cv&utm_medium=cv&utm_campaign=stankocken_cv" target="_blank" class="at">@PrePlay</a></span>
-              <span class="location"><img src="img/ico_map.svg">Paris, France and New York City, USA</span>
-
-              <div class="app_container">
-                <a href="https://play.google.com/store/apps/details?id=com.preplay.android.mlb&utm_source=stankocken_cv&utm_medium=cv&utm_campaign=stankocken_cv" target="_blank" class="app_entry">
-                  <img src="img/ico_app_preplay_mlb.png">
-                  <span class="title">MLB Preplay</span>
-                  50k+ downloads
-                </a>
-                <a href="https://play.google.com/store/apps/details?id=com.preplay.android.nhl&utm_source=stankocken_cv&utm_medium=cv&utm_campaign=stankocken_cv" target="_blank" class="app_entry">
-                  <img src="img/ico_app_preplay_nhl.png">
-                  <span class="title">NHL Preplay</span>
-                  10k+ downloads
-                </a>
-                <a href="https://play.google.com/store/apps/details?id=com.preplay.android.football&utm_source=stankocken_cv&utm_medium=cv&utm_campaign=stankocken_cv" target="_blank" class="app_entry">
-                  <img src="img/ico_app_preplay_football.png">
-                  <span class="title">Preplay Football</span>
-                  5k+ downloads
-                </a>
-              </div>
-
-            </div>
-
-            <span class="date"><div class="round_mark"></div>Jan 2011 - Nov 2012</span>
-            <div class="date_entry left_border">
-              <span class="title">Android Lead Developer <a href="http://www.backelite.com?utm_source=stankocken_cv&utm_medium=cv&utm_campaign=stankocken_cv" target="_blank" class="at">@Backelite</a></span>
-              <span class="location"><img src="img/ico_map.svg">Paris, France</span>
-
-              <div class="app_container">
-                <a href="https://play.google.com/store/apps/details?id=com.dailymotion.dailymotion&utm_source=stankocken_cv&utm_medium=cv&utm_campaign=stankocken_cv" target="_blank" class="app_entry">
-                  <img src="img/ico_app_dailymotion.png">
-                  <span class="title">Dailymotion</span>
-                  10M+ downloads<br />(until v2)
-                </a>
-                <a href="https://play.google.com/store/apps/details?id=fr.creditagricole.androidapp&utm_source=stankocken_cv&utm_medium=cv&utm_campaign=stankocken_cv" target="_blank" class="app_entry">
-                  <img src="img/ico_app_creditagricole.png">
-                  <span class="title">Ma Banque</span>
-                  1M+ downloads<br />(until v2)
-                </a>
-                <a href="https://play.google.com/store/apps/details?id=com.lachainemeteo.marine.androidapp&utm_source=stankocken_cv&utm_medium=cv&utm_campaign=stankocken_cv" target="_blank" class="app_entry">
-                  <img src="img/ico_app_chainemeteo_marine.png">
-                  <span class="title">Météo Marine</span>
-                  500k+ downloads<br />(until v1)
-                </a>
-                <a href="https://play.google.com/store/apps/details?id=com.lachainemeteo.tablet.androidapp&utm_source=stankocken_cv&utm_medium=cv&utm_campaign=stankocken_cv" target="_blank" class="app_entry">
-                  <img src="img/ico_app_chainemeteo_hd.png">
-                  <span class="title truncate">La Chaine Météo HD</span>
-                  500k+ downloads<br />(until v1)
-                </a>
-                <a href="https://play.google.com/store/apps/details?id=com.eurostar.androidapp&utm_source=stankocken_cv&utm_medium=cv&utm_campaign=stankocken_cv" target="_blank" class="app_entry">
-                  <img src="img/ico_app_eurostar.png">
-                  <span class="title">Eurostar</span>
-                  100k+ downloads<br />(until v1)
-                </a>
-                <span class="app_entry">… and more</span>
-              </div>
-
-            </div>
-
-            <span class="date"><div class="round_mark"></div>Jun 2010 - Jan 2011</span>
+            <span class="date"><div class="round_mark"></div>March 2014 - Current</span>
             <div class="date_entry">
-              <span class="title">Android / Windows Mobile / J2EE Developer <a href="http://www.chronolink.fr?utm_source=stankocken_cv&utm_medium=cv&utm_campaign=stankocken_cv" target="_blank" class="at">@Chronolink</a></span>
-              <span class="location"><img src="img/ico_map.svg">Nantes, France</span>
+              <span class="title"><a href="http://metova.com/" target="_blank" class="at">Metova, Inc.</a></span>
+              <span class="title">Android / iOS / Web Developer</span>
+              <span class="location"><img src="img/ico_map.svg">Franklin, TN</span>
+              <span class="description">Help ship a wide variety of projects, ranging from small solo efforts to 15+ members on team</span>
+              <span class="description">Helped maintain infrastructure</span>
+              <span class="description">Mentored other developers on both technical and soft skills</span>
+              <span class="description">Researched and integrated tools and architectures from team-level to company-wide</span>
+              <span class="description">Participated in recruiting process</span>
+              <span class="description">Organized company events</span>
             </div>
 
           </div>
@@ -205,49 +98,13 @@
 
           <div class="date_container">
 
-            <span class="date"><div class="round_mark"></div>2008 - 2011</span>
-            <div class="date_entry left_border">
-              <span class="title">Master of Science in Engineering <a href="http://web.polytech.univ-nantes.fr?utm_source=stankocken_cv&utm_medium=cv&utm_campaign=stankocken_cv" target="_blank" class="at">@Polytech’Nantes</a></span>
-              <span class="location"><img src="img/ico_map.svg">Nantes, France</span>
-              <span class="description">Computer Science and Engineering</span>
+            <span class="date"><div class="round_mark"></div>September 2009 - December 2013</span>
+            <div>
+              <span class="title">Bachelor of Science in <a href="https://www.tntech.edu/is/sis/" target="_blank" class="at">Interdisciplinary Studies</a></span>
+              <span class="location"><img src="img/ico_map.svg">Cookeville, TN</span>
+              <span class="description">Computer Science / Psychology</span>
             </div>
 
-            <span class="date"><div class="round_mark"></div>2006 - 2008</span>
-            <div class="date_entry">
-              <span class="title">University Technology Diploma <a href="http://iut.univ-tours.fr?utm_source=stankocken_cv&utm_medium=cv&utm_campaign=stankocken_cv" target="_blank" class="at">@UniversiteTours</a></span>
-              <span class="location"><img src="img/ico_map.svg">Tours, France</span>
-              <span class="description">Electrical Engineering and Industrial Automation.</span>
-            </div>
-
-          </div>
-
-        </div>
-
-        <div class="card-panel cv_card">
-          <img src="img/ico_personnal_project.svg" class="icon">
-          <span class="title">Personal Projects</span>
-
-          <div class="app_container">
-            <a href="https://play.google.com/store/apps/details?id=com.skocken.velibici&utm_source=stankocken_cv&utm_medium=cv&utm_campaign=stankocken_cv" target="_blank" class="app_entry">
-              <img src="img/ico_app_velibici.png">
-              <span class="title">Velibici</span>
-              5k+ downloads
-            </a>
-            <a href="https://github.com/StanKocken/EfficientAdapter?utm_source=stankocken_cv&utm_medium=cv&utm_campaign=stankocken_cv" target="_blank" class="app_entry">
-              <img src="img/ico_github.svg">
-              <span class="title">EfficientAdapter</span>
-              246 stars
-            </a>
-            <a href="https://github.com/StanKocken/SVG2Drawable?utm_source=stankocken_cv&utm_medium=cv&utm_campaign=stankocken_cv" target="_blank" class="app_entry">
-              <img src="img/ico_github.svg">
-              <span class="title">SVG2Drawable</span>
-              124 stars
-            </a>
-            <a href="https://github.com/StanKocken/MaterialResume?utm_source=stankocken_cv&utm_medium=cv&utm_campaign=stankocken_cv" target="_blank" class="app_entry">
-              <img src="img/ico_github.svg">
-              <span class="title">MaterialResume</span>
-              0 stars
-            </a>
           </div>
 
         </div>
@@ -257,14 +114,20 @@
           <span class="title">Professional Skills</span>
           <div class="skills">
 
-              <span class="title">Mobile</span>
-              Android (Java), Windows Phone (C#), Windows Mobile (C#), J2ME (Java)
+              <span class="title">Android</span>
+              Android Studio, Java, JUnit, Espresso, MVP, Gradle, RxJava, Retrofit, Dagger, Butterknife
+
+              <span class="title">iOS</span>
+              Xcode, Objective-C, Swift, XCTest, KIF, MVC, Cocoapods, AFNetworking, Alamofire
 
               <span class="title">Web / Server</span>
-              PHP, HTML, Javascript (CoffeeScript, AngularJS, NodeJS), Ruby
+              RubyMine, Ruby-on-Rails, HTML, Javascript (CoffeeScript, AngularJS), CSS, some Java Web (Spring)
+
+              <span class="title">Tools</span>
+              Git, Continuous Integration (Jenkins), JIRA, Confluence
 
               <span class="title">Other</span>
-              WebService (REST, JSON, XML), WebSocket, CouchBase
+              Agile, Scrum, Extreme Programming, Object Oriented Programming, Architecture Designs
 
           </div>
         </div>
