--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               <span class="title"><a href="http://metova.com/" target="_blank" class="at">Metova, Inc.</a></span>
               <span class="title">Android / iOS / Web Developer</span>
               <span class="location"><img src="img/ico_map.svg">Franklin, TN</span>
-              <span class="description">Help ship a wide variety of projects, ranging from small solo efforts to 15+ members on team</span>
+              <span class="description">Shipped a wide variety of projects, ranging from small solo efforts to 15+ members on team</span> 
               <span class="description">Helped maintain infrastructure</span>
               <span class="description">Mentored other developers on both technical and soft skills</span>
               <span class="description">Researched and integrated tools and architectures from team-level to company-wide</span>
@@ -90,23 +90,6 @@
             </div>
 
           </div>
-        </div>
-
-        <div class="card-panel cv_card">
-          <img src="img/ico_education.svg" class="icon">
-          <span class="title">Education</span>
-
-          <div class="date_container">
-
-            <span class="date"><div class="round_mark"></div>September 2009 - December 2013</span>
-            <div>
-              <span class="title">Bachelor of Science in <a href="https://www.tntech.edu/is/sis/" target="_blank" class="at">Interdisciplinary Studies</a></span>
-              <span class="location"><img src="img/ico_map.svg">Cookeville, TN</span>
-              <span class="description">Computer Science / Psychology</span>
-            </div>
-
-          </div>
-
         </div>
 
         <div class="card-panel cv_card">
@@ -131,11 +114,27 @@
 
           </div>
         </div>
+
+        <div class="card-panel cv_card">
+          <img src="img/ico_education.svg" class="icon">
+          <span class="title">Education</span>
+
+          <div class="date_container">
+
+            <span class="date"><div class="round_mark"></div>September 2009 - December 2013</span>
+            <div>
+              <span class="title">Bachelor of Science in <a href="https://www.tntech.edu/is/sis/" target="_blank" class="at">Interdisciplinary Studies</a></span>
+              <span class="location"><img src="img/ico_map.svg">Cookeville, TN</span>
+              <span class="description">Computer Science / Psychology</span>
+            </div>
+
+          </div>
+
+        </div>
+
       </div>
 
-
     </div>
-
 
     </body>
 </html>
