Further cleaned up language

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               <span class="title"><a href="http://metova.com/" target="_blank" class="at">Metova, Inc.</a></span>
               <span class="title">Android / iOS / Web Developer</span>
               <span class="location"><img src="img/ico_map.svg">Franklin, TN</span>
-              <span class="description">Shipped a wide variety of projects, ranging from small solo efforts to 15+ members on team</span> 
+              <span class="description">Shipped a wide variety of products, ranging from small solo efforts to 15+ members on project</span> 
               <span class="description">Helped maintain infrastructure</span>
               <span class="description">Mentored other developers on both technical and soft skills</span>
               <span class="description">Researched and integrated tools and architectures from team-level to company-wide</span>
