Added in avatar

--- a/index.html
+++ b/index.html
@@ -22,22 +22,17 @@
 
         <div class="collection card-panel" style="padding: 0px">
           <div class="collection-header about_me_header">
+            <img class="avatar" src="img/avatar.png"/>
             <span class="name">Kyle Patrick Sharp</span>
           </div>
-
-          <div class="collection-item avatar">
-            <img src="img/ico_date.svg" class="icon">
-            <span class="title">26</span>
-            Years Old
-          </div>
-
-          <div class="divider"></div>
 
           <a href="mailto:kyle@kpsharp.com" target="_blank" class="collection-item avatar">
             <img src="img/ico_email.svg" class="icon">
             <span class="title">kyle@kpsharp.com</span>
             Personal
           </a>
+
+          <div class="divider"></div>
 
           <a href="https://www.kpsharp.com" target="_blank" class="collection-item avatar">
             <img src="img/ico_web.svg" class="icon">
